infra/k8s/auth-mongo-depl.yml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
# NodePort service

apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-serv
spec:
  type: NodePort
  selector:
    app: auth-mongo
  ports:
    # the name is only for logging purpouses
    - name: db
      protocol: TCP
      # default port for mongo
      port: 27017
      targetPort: 27017
