infra/k8s/client-depl.yml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: nicolaslazzos/client
          imagePullPolicy: Never
---
# NodePort service

apiVersion: v1
kind: Service
metadata:
  name: client-serv
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
