infra/k8s/expiration-redis-depl.yml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis
---
# NodePort service

apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-serv
spec:
  type: NodePort
  selector:
    app: expiration-redis
  ports:
    # the name is only for logging purpouses
    - name: db
      protocol: TCP
      # default port for redis
      port: 6379
      targetPort: 6379
