infra/k8s/payments-depl.yml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: nicolaslazzos/payments
          imagePullPolicy: Never
---
# NodePort service

apiVersion: v1
kind: Service
metadata:
  name: payments-serv
spec:
  type: NodePort
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
