infra/k8s/tickets-depl.yml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: nicolaslazzos/tickets
          imagePullPolicy: Never
---
# NodePort service

apiVersion: v1
kind: Service
metadata:
  name: tickets-serv
spec:
  type: NodePort
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
